[package]
name = "dcpu16"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "sample"
path = "examples/sample.rs"

[[example]]
name = "assemble"
path = "examples/assemble.rs"

[dependencies]
tracing = "0.1.26"

[dev-dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
tracing-subscriber = "0.2.18"
