[package]
name = "dcpu16"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "sample"
path = "examples/sample.rs"

[[example]]
name = "assemble"
path = "examples/assemble.rs"

[features]
default = [ "assembler" ]
assembler = [ "pest", "pest_derive" ]

[dependencies]
tracing = "0.1.26"
pest = { version = "2.1.3", optional = true }
pest_derive = { version = "2.1.0", optional = true }

[dev-dependencies]
tracing-subscriber = "0.2.18"
