[package]
name = "dcpu16"
description = "A DCPU-16 emulator and assembler"
version = "0.1.0"
edition = "2018"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sunsided/dcpu-16"
keywords = ["dcpu-16", "emulator", "assembler"]
categories = ["compilers", "emulators", "games"]

[[example]]
name = "sample"
path = "examples/sample.rs"

[[example]]
name = "assemble"
path = "examples/assemble.rs"

[features]
default = [ "assembler" ]
assembler = [ "pest", "pest_derive" ]

[dependencies]
tracing = "0.1.26"
pest = { version = "2.1.3", optional = true }
pest_derive = { version = "2.1.0", optional = true }

[dev-dependencies]
tracing-subscriber = "0.2.18"
